--- a/subsection_Cross_Validation_textbf_Cross__.tex
+++ b/subsection_Cross_Validation_textbf_Cross__.tex
@@ -10,26 +10,27 @@ Cross Validation (CV) is one of the most widespread techniques to evaluate the g
  Note that cross validation intends to estimate the expected \textit{out-of-sample} error $\Expect \left[  L(Y, \hat{f}(X)) \right]$, when the model is tested against \textbf{independent} samples from the true distribution. For this reason, it is fundamental to ensure independence of the training set and the test set. Any transformations that must be done on the input data that jointly uses the input and output samples in the process must be done and \textit{learned} only on the training set. It is very important that we don't introduce information from our test set in the estimator. The model should never \textit{see} the test data until we use it to evaluate our learner. 
  
  
- estimate the prediction error with
+estimate the prediction error with
  
+If we have decided 
  
+%where $K$ is the number of folds and $N$ the number of samples in our dataset. 
  
- If we have decided 
- 
- %where $K$ is the number of folds and $N$ the number of samples in our dataset. 
- 
- 
- \begin{definition}{K-Fold CV Prediction Error Estimator}
+\begin{definition}{K-Fold CV Prediction Error Estimator}
  	
- \end{definition}
+\end{definition}
  
- \subsubsection{Choice of $K$} 
+\subsubsection{Choice of $K$} 
  
- Higher K = bigger training set (smaller folds) and thus smaller validation sets. leads to a better bias of the model . With a few exceptions, having a higher number K will mean a higher computational burden since $K$ estimators are fitted. 
+Higher K = bigger training set (smaller folds) and thus smaller validation sets. leads to a better bias of the model . With a few exceptions, having a higher number K will mean a higher computational burden since $K$ estimators are fitted. 
  
  Lower K = smaller traning set thus lower variance and higher bias. It also overestimates the EPE since having less data implies having worse bounds from asymptotic results. 
  
 \textbf{leave-one-out CV}
+less computations, stronger bias, higher variance.
+
+\textbf{Stratified CV}
+for biased classes
  
  Let $\mathcal{A} = [\alpha_0, \alpha_1,..., \alpha_l   ]$ be a list of hyperparameter settings and  $\mathcal{K} =[1,..,K]$ a list of folds.  A full K-Fold Cross Validation procedure takes the following form.
  
@@ -69,6 +70,3 @@ Consensus \footnote{\cite{hastie-elemstatslearn} P. 260} is that in most cases t
  }
 
 \subsubsection{Scoring measures in supervised Classification}
-
-
-
