more CV scores lines

--- a/trash.tex
+++ b/trash.tex
@@ -183,8 +183,11 @@ Consensus \footnote{\cite{hastie-elemstatslearn} P. 260} is that in most cases t
 
 
 
-\subsubsection{CV Scores in Supervised Learning}
+\subsubsection{CV Scores in Classification Learning}
 
+In the classification setting, it is common to name the loss functions as \textit{scores}.
+
+Accuracy, Recall, Specificity, Precision, f1_weighted, roc_AUC
 
 \noindent
 \renewcommand\arraystretch{1.5}
