--- a/figures/figure-lowROCAUC/caption.tex
+++ b/figures/figure-lowROCAUC/caption.tex
@@ -1,1 +1,2 @@
-Replace this text with your caption
+Example of the ROC curve for a Random Forest classifier used on the \textit{cancer} dataset.  The code is extracted from Python's sklearn library. \footnote{For more information on 
+http://scikit-learn.org/stable/index.html}
