--- a/figures/figure-lowROCAUC/caption.tex
+++ b/figures/figure-lowROCAUC/caption.tex
@@ -1,2 +1,1 @@
-Example of the ROC curve for a Random Forest classifier used on the \textit{cancer} dataset.  The code is extracted from Python's sklearn library. \footnote{For more information on 
-http://scikit-learn.org/stable/index.html}
+Example of a ROC curve frp, a Random Forest classifier used on the \textit{cancer} dataset.  The code used for this graph is largely based on Python's Sci-kit Learn library. \footnote{For more information on `sklearn` please refer to \url{http://scikit-learn.org/stable/index.html} \cite{sci-kit} . The cancer dataset is a copy of the UCI ML Breast Cancer Wisconsin (Diagnostic) set and is available from this same module or from \url{https://goo.gl/U2Uwz2}.}
