--- a/As_a_counter_example_another__.tex
+++ b/As_a_counter_example_another__.tex
@@ -1,9 +1,1 @@
-As a counter example, another algorithm was ran on the same problem as \ref{figure-lowROCAUC}.Notice how the algorithm is considered \textit{perfect} by the ROCAUC metric. No additional data transformation has been applied to the
-
-ADFASASF'
-
-ADS
-FAS
-D
-DSF
-ADSF
+As a counter example, another algorithm was ran on the same problem as \ref{figure-lowROCAUC}. Notice how the algorithm is considered almost \textit{perfect} by the ROCAUC metric. No additional data transformations have been applied after between runs. The difference in scores is notable and correspond entirely to the algorithms being used. \footnote{To replicate this test a public iPython Notebook has been set up at \url{https://github.com/jdemonasterio/authorea/blob/master/Notebooks/roc_curve_graph.ipynb} }
