--- a/figures/figure-highROCAUC/caption.tex
+++ b/figures/figure-highROCAUC/caption.tex
@@ -1,1 +1,1 @@
-Replace this text with your caption
+Example of a ROC curve from a Support Vector Macihne classifier. The $0.97$ ROCAUC score given is now almost perfect for this problem.
