--- a/figures/figure-highROCAUC/caption.tex
+++ b/figures/figure-highROCAUC/caption.tex
@@ -1,1 +1,1 @@
-Example of a ROC curve from a Support Vector Macihne classifier. The $0.97$ ROCAUC score given is now almost perfect for this problem.
+Example of a ROC curve from a Support Vector Machine classifier. The $0.97$ ROCAUC score given is now almost perfect for this problem.
