--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -266,3 +266,13 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
 }
 
 
+@article{bengio-unbiasedCvEstimator,
+  author    = {Yoshua Bengio and Yves Grandvalet},
+  title     = {No Unbiased Estimator of the Variance of K-Fold Cross-Validation},
+  journal   = {Journal of Machine Learning Research},
+  volume    = {5},
+  pages     = {1089--1105},
+  year      = {2004},
+  url       = {http://www.jmlr.org/papers/volume5/grandvalet04a/grandvalet04a.pdf},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/jmlr/BengioG04},
+}
